k8s/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: eliasbedmar/dockerstack-worker
