k8s/service-clusterip-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    component: postgres
