k8s/service-clusterip-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    component: redis
